fixed overflow issue when maximizing windows on mobile

--- a/src/styles/screens/homeScreen.scss
+++ b/src/styles/screens/homeScreen.scss
@@ -1,7 +1,7 @@
 .s-home {
   display: flex;
   flex-direction: column;
-  min-height: 100dvh;
+  min-height: 100svh;
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center;
@@ -12,5 +12,6 @@
   main {
     flex: 1;
     position: relative;
+    overflow: hidden;
   }
 }
